--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -18,12 +18,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 :root {
-  --primary: #396dff;
-  --primary--dim: #6987db;
-  --darkgrey: #d4d4d4;
-  --medgrey: #e0e0e0;
-  --grey: #f7f7f7;
-  --white: #fff;
+  --yellow: #f0f3bd;
+  --brown: #654900;
 
   --xs: 4px;
   --s: 8px;
@@ -36,6 +32,7 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
+  overflow: hidden;
 }
 
 form {
