--- a/client/src/components/pages/Lobby.css
+++ b/client/src/components/pages/Lobby.css
@@ -37,6 +37,7 @@ h1 {
   background-color: rgba(0, 0, 0, 0.25);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
+  border-color: var(--brown);
   margin: 1rem auto;
   display: flex; /* If you want to lay out player names horizontally */
   align-items: center;
