--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -36,56 +36,6 @@ body {
   padding: 0;
   font-family: "Roboto", serif;
   font-weight: var(--light);
-  overflow: hidden;
-}
-
-form {
-  flex-grow: 1;
-}
-
-.u-flex {
-  display: flex;
-}
-
-.u-flexColumn {
-  display: flex;
-  flex-direction: column;
-}
-
-.u-flex-justifyCenter {
-  justify-content: center;
-}
-
-.u-flex-alignCenter {
-  align-items: center;
-}
-
-.u-inlineBlock {
-  display: inline-block;
-}
-
-.u-bold {
-  font-weight: 600;
-}
-
-.u-textCenter {
-  text-align: center;
-}
-
-.u-relative {
-  position: relative;
-}
-
-.u-pointer {
-  cursor: pointer;
-}
-
-.u-link {
-  color: var(--primary);
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.u-link:hover {
-  color: var(--primary--dim);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
