--- a/client/src/components/pages/Lobby.css
+++ b/client/src/components/pages/Lobby.css
@@ -70,6 +70,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 250px;
+  height: 150px;
 }
 
 .player-blur-effect {
