fix user avatar sizing on iphone

--- a/client/src/components/modules/Header.css
+++ b/client/src/components/modules/Header.css
@@ -41,6 +41,8 @@
 .user-avatar {
   width: 32px;
   height: 32px;
+  min-width: 32px;
+  min-height: 32px;
   border-radius: 50%;
   background: linear-gradient(135deg, #e94561, #9b2c3f);
   display: flex;
